src/global.scss
/* ... */
.chart-hover-card-selected-icon.safety-side-effects {
  background: g.$pink-600;
}

.chart-hover-card-icon-text {
  color: g.$grey-500;
  font-family: g.$body-font;
  font-size: 14px;
  font-weight: g.$body-weight;
}

.chart-hover-card-name {
  padding-left: 8px;
  color: g.$grey-900;
  font-family: g.$body-font;
  font-size: 14px;
  font-weight: g.$body-weight;
}

.chart-hover-card-value {
  padding-left: 17px;
  text-align: right;
  color: black;
  font-family: g.$body-font;
  font-size: 14px;
  font-weight: g.$body-weight;
}

.next-steps-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.next-steps-item {
  width: 30%;
}

div.next-steps-item > h3 {
  margin-top: 40px;
}

.footer-referencebar {
  max-width: g.$content-max-width;
  width: 100%;

  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}

.footer-referencebar-logo-container {
  height: 18px;
  width: 75px;
  margin: 0 24 0 0px;
}

.footer-referencebar-glue-logo {
  fill: g.$grey-600;
  height: 18px;
  width: 75px;
  margin: 0 24px 0 -10px;
}

@media (max-width: g.$media-breakpoint) {
  .chart-hover-card {
    display: block;
  }

  .chart-hover-card.inactive {
    display: none;
  }
}

@media (min-width: g.$media-breakpoint) {
  .chart-hover-card {
    position: absolute;
    visibility: visible;
  }

  .chart-hover-card.inactive {
    display: none;
  }
}

